Updated overflow scrolls to overflow auto to fix windows unneeded scrollbars issue

--- a/src/client/components/Dashboard/Dashboard.component.scss
+++ b/src/client/components/Dashboard/Dashboard.component.scss
@@ -1,3 +1,3 @@
 .c-Dashboard {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
