--- a/src/client/styles/home/content-renderer/user/user-list.scss
+++ b/src/client/styles/home/content-renderer/user/user-list.scss
@@ -117,7 +117,7 @@ $filer-text-color : #424242;
 
             .filter-content-row {
               max-height: 25rem;
-              overflow-y: scroll;
+              overflow-y: auto;
               .filter-col-header {
                 padding-bottom: 10px;
                 border-bottom: 2px solid white;
@@ -162,7 +162,7 @@ $filer-text-color : #424242;
         white-space: nowrap;
         overflow: -moz-scrollbars-none;
         -ms-overflow-style: none;
-        overflow-x: scroll;
+        overflow-x: auto;
       }
       .filter-pin-row::-webkit-scrollbar{
         height: 0 !important;
